@@ -83,7 +83,7 @@ PKG_CHECK_MODULES(GNOMEMEETING, gtk+-2.0 >= 2.4.0 gthread-2.0 >= 2.4.0 esound >=
 fi
 
 PWLIB_REC_VERSION="1.8.3"
-OPENH323_REC_VERSION="1.15.2"
+OPENH323_REC_VERSION="1.15.1"
 
 
 dnl ###########################################################################
