@@ -1,5 +1,10 @@
 2004-10-16  Damien Sandras  <dsandras@gnome.org>
 
+	* src/addressbook_window.cpp: Fixed cancel in edit_contact_dialog_run.
+	Fixes #155588.
+
+2004-10-16  Damien Sandras  <dsandras@gnome.org>
+
 	* configure.in: Reverted change I shouldn't have committed.
 
 2004-10-16  Damien Sandras  <dsandras@gnome.org>
